k8s-manifests/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    workload-type: on-demand
